syntax = 'proto3';

service DataAccessLayer {
  rpc GetPatient(ID) returns (Patient) {}
}

message ID {
  string id = 1;
}

message Patient {
  string id = 1;
  optional string first_name = 2;
  optional string last_name = 3;
  optional string birth_date = 4;
}
